--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-image: url('./assets/piccc1.avif');
+  background-image: url('./assets/rm222-mind-20.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
